Some bug fixes, you could enter the same charecter twice by entering it once as lowercase and once as uppercase by, for example, pressing 'i' and then pressing 'shift + i' would enter the charecter twice and since none of the words contain uppercase letter a hangman penalty/incorrect guess would be added for no reason. also added a feature so the user can actually see what the word was when they lose the game. The 'Play Again!' button for the loss screen was also not working because you were using the same class for the 'Play Again!' button on both screens. also fixed the font size a lil bit to accomodate for the new 'The Word was: ' message on the loss screen

--- a/Play/styles.css
+++ b/Play/styles.css
@@ -135,6 +135,11 @@ body{
 
 }
 
+.you-win,
+.you-lose{
+  font-size: 29;
+}
+
 .hidden{
   display: none;
 }
